[Mac] Sinkhole __CFRunLoopRun() in the exception preprocessor.

On 10.13, this function now contains a try/catch block.

Bug: 749181
Change-Id: I314d2e9468d850d29062ef559f1fbdb92cef073e
Reviewed-on: https://chromium-review.googlesource.com/610660
Reviewed-by: Mark Mentovai <mark@chromium.org>
Commit-Queue: Robert Sesek <rsesek@chromium.org>
Cr-Commit-Position: refs/heads/master@{#493460}
Former-commit-id: aae6177874e6a17f9a321a5c0697f9e3727f8d66