chrome/browser/mac/exception_processor.mm
@@ -80,8 +80,9 @@ static objc_exception_preprocessor g_next_preprocessor = nullptr;
 static const char* const kExceptionSinkholes[] = {
   "CFRunLoopRunSpecific",
   "_CFXNotificationPost",
-  "_dispatch_client_callout",
+  "__CFRunLoopRun",
   "__NSFireDelayedPerform",
+  "_dispatch_client_callout",
 };
 
 // This function is used to make it clear to the crash processor that this is
@@ -175,7 +176,7 @@ static id ObjcExceptionPreprocessor(id exception) {
         }
       }
 
-      DVLOG(1) << "Stopping search for exception handler at " << proc_name;
+      VLOG(1) << "Stopping search for exception handler at " << proc_name;
 
       break;
     }
